--- a/django-bloggy/bloggy_project/templates/blog/index.html
+++ b/django-bloggy/bloggy_project/templates/blog/index.html
@@ -1,6 +1,8 @@
 {% extends '_base.html' %}
  
 {% block content %}
+<div class="row">
+    <div class="col-md-8">
     {% if latest_posts %}
         <ul>
             {% for post in latest_posts %}
@@ -11,4 +13,14 @@
             {% endfor %}
         </ul>
     {% endif %}
+</div>
+<div class="col-md-4">
+<h4>Must See:</h4>
+<ul>
+    {% for popular_post in popular_posts %}
+        <li><a href="/blog/{{ popular_post.url }}">{{ popular_post.title }}</a></li>
+    {% endfor %}
+</ul>
+</div>
+</div>
 {% endblock %}
