--- a/django_ecommerce/django_ecommerce/templates/base.html
+++ b/django_ecommerce/django_ecommerce/templates/base.html
@@ -8,7 +8,7 @@
    <meta name="author" content="">
 
    <!-- Le styles -->
-   <link href="https://maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
    <style>
     body {
      padding-top: 20px;
@@ -43,16 +43,24 @@
      margin-top: 28px;
     }
     </style>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"
-      type="text/javascript"></script>
-    {% block extrahead %}
-    {% endblock %}
+    <script src="http://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+     {% block extrahead %}
+     {% endblock %}
     <script type="text/javascript">
-    $(function(){
-      {% block jquery %}
-      {% endblock %}
-    });
+     $(function(){
+       {% block jquery %}
+       {% endblock %}
+     });
     </script>
+     <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
+     <script type="text/javascript">
+       //<![CDATA[
+       Stripe.setPublishableKey('{{ publishable }}')
+       //]]>
+     </script>
+     <script>{% load static %}</script>
+     <script src="{% get_static_prefix %}jquery.js" type="text/javascript"></script>
+     <script src="{% get_static_prefix %}application.js" type="text/javascript"></script>
   </head>
 
  <body>
